until this point, flex items were not responsive. Added flex-wrap property to fix this

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -7,7 +7,7 @@ display: flex;
   justify-content: center;
 }
 /* set all styling to box-model styling */
-/* *{box-sizing: border-box;} */
+*{box-sizing: border-box;}
 
 .container{
     display: flex;
@@ -32,6 +32,7 @@ display: flex;
     text-align: justify;
     font-size:31px;
     font-family: lucida bright;
+    flex-wrap: wrap;
 }
 
 #about-me-image{
@@ -84,6 +85,7 @@ img {
     width: 100%;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 20px;
+    flex-wrap: wrap;
 }
 
 .project-image{
